--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="xyz.aungpyaephyo.padc.firebase">
 
     <application
@@ -9,7 +10,8 @@
         android:label="@string/launcher_name"
         android:roundIcon="@mipmap/ic_news_from_people"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activities.NewsFeedActivity"
             android:label="@string/launcher_name"
@@ -20,12 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.AddNewsActivity"
             android:label="@string/launcher_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
         <service
             android:name=".fcm.AppFirebaseMessagingService"
             android:exported="true">
@@ -34,13 +38,13 @@
             </intent-filter>
         </service>
 
-        <service
-            android:name=".fcm.AppFirebaseInstanceIdService"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-            </intent-filter>
-        </service>
+        <!--<service-->
+            <!--android:name=".fcm.AppFirebaseInstanceIdService"-->
+            <!--android:exported="true">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.google.firebase.INSTANCE_ID_EVENT" />-->
+            <!--</intent-filter>-->
+        <!--</service>-->
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
